# ncOS_v21.7

./: # ncos_session.py  .env.template  .gitignore  1.py  123.py  CHANGELOG_v21.7.1.md  COMPLETE_INTEGRATION_GUIDE.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  F3.py  FOLDER_STRUCTURE.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NCOS_Fix_Solution_Summary.md  NCOS_Voice_Journal_Documentation.md  NCOS_v21_7_1_Enhanced_Complete_Deployment_Manifest.json  NCOS_v21_7_1_Enhanced_Complete_EXECUTION_SUMMARY.md  NCOS_v21_PHOENIX_COMPREHENSIVE_ANALYSIS.json  NCOS_v21_PHOENIX_ULTIMATE.py  PACKAGE_INFO.json  PHOENIX_MERGE_IMPLEMENTATION.py  PHOENIX_MERGE_STEPS.md  QUICK_START_Voice_Journal.md  README.md  README_NCOS_v21_7_1_Enhanced_Complete.md  README_ncOS_Journal_v2.md  README_v21.7.1.md  Untitled-1.py  VISUAL_FOLDER_TREE.md  agent_registry_strategy_update.yaml  chart_engine.py  check_journal.sh  circuit_breaker.py  comprehensive_fix.py  comprehensive_trigger_system.yaml  consolidate_configs.py  consolidate_configs_clean.py  core_enhanced_master_orchestrator.py  (+96 more)
NCOS_Phoenix_Ultimate_v21.7/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
NCOS_v21_PHOENIX_MESH_FINAL/: Comprehensive Component Inventory.md  DEPLOYMENT.md  MIGRATION_MATRIX.json  NCOS "Phoenix-Session" Architecture_ The In-Session Model.md  NCOS_v21_ARCHITECTURE.md  PHOENIX_MERGE_PACKAGE.json  QUICKSTART.md  adaptive_phoenix_merge.py  auto_merge_phoenix.py  consolidation_report.json  execute_phoenix_merge.sh  phoenix_config.json  phoenix_merge_integration.py  quickfix_phoenix.py  test_phoenix.py  verify_ncos_structure.py
NCOS_v21_PHOENIX_MESH_FINAL 2/: CONSOLIDATION_SUMMARY.json  requirements.txt
_21.7.2_to_deploy/: ZBAR_API_DEPLOYMENT.md  enhanced_menu_system.py  menu_voice_integration.py  ncos_openapi.json  ncos_zbar_api.py  plugin_api_backend.py  requirements.txt  setup_ncos.py  system_config.yaml  voice_api_routes.py  voice_tag_parser.py
_21.7.2_verify/: NCOS_Plugin_README.md  NCOS_Voice_Journal_Documentation.md  QUICK_START_Voice_Journal.md  VOICE_INTEGRATION_INSTRUCTIONS.md  ZBAR_API_DEPLOYMENT.md  enhanced_menu_system.py  ncos_ai_plugin.json  plugin_api_backend.py  requirements.txt  requirements_zbar.txt  setup_ncos.py  voice_api_routes.py  voice_command_dashboard.py  voice_tag_parser.py  zbar_voice_integration.py
__fixes/: NCOS_Fix_Solution_Summary.md  NCOS_v21_7_FIX_GUIDE.md  generate_advanced_configs.py  generate_agent_configs.py  production_logging.py
_to_integrate/: AUTOSTART_QUICK_REFERENCE.md  AUTOSTART_v21.yaml  bias_report_template.md  ncos_autostart.py  refactored_snapshot_system.py
agents/: __init__.py  broadcast_relay.py  core_system_agent.py  dimensional_fold.py  drift_detection_agent.py  interaction_manager.py  knowledge_intelligence.py  market_conditioner.py  market_data_captain.py  market_maker.py  master_orchestrator.py  maz2_executor.py  metrics_aggregator.py  micro_wyckoff_event.py  ncos_base_agent.py  ncos_divergence_strategy_agent.py  ncos_liquidity_analysis_agent.py  ncos_market_data_native_agent.py  ncos_market_manipulation_agent.py  orderflow_anomaly.py  parquet_ingestor.py  performance_monitor.py  portfolio_manager.py  position_manager.py  protection_reentry.py  quantitative_analyst.py  report_generator.py  risk_analyzer.py  risk_guardian.py  risk_guardian_agent.py  session_state_manager.py  session_sweep_reversal.py  signal_processor.py  smc_liquidity_trap.py  smc_master_agent.py  smc_router.py  strategy_evaluator.py  technical_analyst.py  tmc_executor.py  vector_data_processor.py  (+3 more)
api/: main.py  voice_api_routes.py
backtesting/: engine.py
config/: SPLIT_REPORT.md  agent_registry.yaml  agents_config.yaml  agents_consolidated.json  api_config.yaml  api_consolidated.json  backup_config.yaml  bootstrap.yaml  bootstrap_config.yaml  broadcastrelay_config.yaml  compliance_agent_config.yaml  config_loader.py  consolidation_errors.txt  consolidation_summary.json  coresystemagent_config.yaml  deployment_config.yaml  drift_detection.yaml  drift_detection_agent_config.yaml  engines_config.yaml  engines_consolidated.json  enhanced_config.yaml  entry_executor_smc_config.yaml  gpt_instructions.py  index.yaml  liquidity_sniper_config.yaml  manifest_config.yaml  market_bias_launcher.py  market_bias_system.yaml  market_manipulation_agent_config.yaml  marketdatacaptain_config.yaml  master_orchestrator.yaml  maz2executor_config.yaml  models_config.yaml  models_consolidated.json  monitoring_config.yaml  ncos_config.yaml  ncos_system_config.yaml  parquetingestor_config.yaml  phoenix_config.json  portfoliomanager_config.yaml  (+21 more)
core/: _build_config.py  _ufunc_config.py  backend_config.py  consolidate_configs_clean.py  consolidate_configs_robust.py  core_enhanced_master_orchestrator.py  enhanced_core_orchestrator.py  enhanced_xanflow_orchestrator.py  (+9 more)
zanflow_workspace/zanalytics_5/: PHASE2.2.txt  README.md  advanced_smc_orchestrator.py  boot_zanalytics_5_1_9.py  config.yaml.txt  confluence_engine.py  copilot_orchestrator.py  entry_classifier_model.py  merge_trait_config.md  optimizer_loop.py  patch_view_translator.py  pyproject.toml  run_test_pipeline.py  run_zanalytics_session.py
zanflow_workspace/zanalytics_5/_bblocks/: Project copy.txt
zanflow_workspace/zanalytics_5/building_blocks/: chat_zapp.txt
zanflow_workspace/zanalytics_5/core/: micro_wyckoff_sniffer.py  telegram_alert_engine.py
zanflow_workspace/zanalytics_5/knowledge/: A Playbook for Institutional Order Flow Trading.txt  Examination of a Multi-Timeframe Trading Methodology.txt  MENTFX Wyckoff Strategy.txt  Options_INtel.txt  Playbook inducement_sweep_poi.txt  Strategy inducement_sweep_poi.txt  v5.md  wyckoff.txt
zanflow_workspace/zanalytics_5/loader/: tick_processor.py
zanflow_workspace/zanalytics_5/prompts/: ZANZIBAR_AGENT_INSTRUCTIONS.md  ZANZIBAR_DEPLOYMENT_PROMPT.md  ZANZIBAR_GEMINI_AGENT_PROMPT.md  ZANZIBAR_INIT_PROMPT_FROM_ZIP.md  ZANZIBAR_V5.1_INIT_PROMPT.md
zanflow_workspace/zanalytics_5/trait_engine/: merge_config.py
zanflow_workspace/zanalytics_5/utils/: indicators2.py
(+298 files in other folders)
