[tool.poetry]
name = "ncos-v21"
version = "0.1.0"
description = "NCOS v21 Phoenix Mesh"
authors = ["NCOS Team <ncos@example.com>"]
license = "Proprietary - NCOS v21 Phoenix Mesh"
readme = "README.md"
packages = [{include = "src"}, {include = "phoenix_session"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "2.11.7"
pandas = "2.3.0"
PyYAML = "6.0.2"
python-dotenv = "^1.0.0"
numpy = "2.3.0"
scipy = "^1.10.0"
httpx = "^0.24.0"
websockets = "^11.0"
loguru = "^0.7.0"
prometheus-client = "^0.17.0"
requests = "2.32.4"
matplotlib = "3.10.3"
plotly = "^5.15.0"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
